--- a/src/app/modales/registro/registro.component.html
+++ b/src/app/modales/registro/registro.component.html
@@ -1,26 +1,48 @@
-<div class="container">
-    <h2>Registro</h2>
-    <form action="">
-      Nombre
-      <input type="text" name="nombre" maxlength="100" />
-      Apellido
-      <input type="text" name="apellido" maxlength="100" />
-      Usuario
-      <input type="text" name="usuario" maxlength="100" />
-      Genero
-      <select name="genero">
-        <option value="1">Mujer</option>
-        <option value="2">Hombre</option>
-      </select>
-      Email
-      <input type="text" name="email" maxlength="100" />
-      Password
-      <input type="text" name="pass1" maxlength="100" />
-      Repite password
-      <input type="text" name="pass2" maxlength="100" />
-      <div class="botones">
-        <input type="submit" value="Confirmar" />
-        <input type="submit" value="Cancelar" />
-      </div>
-    </form>
+<form class="container" (ngSubmit)="onSubmit()" #registerForm="ngForm">
+  <h2 class="title">Registro</h2>
+  <div class="input-registro">
+    <mat-form-field class="example-full-width">
+      <mat-label>Nombre</mat-label>
+      <input type="text" name="nombre" maxlength="100" matInput>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Apellido</mat-label>
+      <input type="text" name="apellido" maxlength="100" matInput>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Usuario</mat-label>
+      <input type="text" name="usuario" maxlength="100" matInput>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Género</mat-label>
+      <mat-select name="genero" matInput>
+        <mat-option value="1">Mujer</mat-option>
+        <mat-option value="2">Hombre</mat-option>
+        <mat-option value="3">Antilope</mat-option>
+        <mat-option value="4">Pelado</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Email</mat-label>
+      <input type="email" name="email" maxlength="100" matInput>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Password</mat-label>
+      <input type="password" name="pass1" maxlength="100" matInput>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Repite Password</mat-label>
+      <input type="password" name="pass2" maxlength="100" matInput>
+    </mat-form-field>
   </div>
+  <div class="botones">
+    <button type="submit" value="Confirmar" mat-button>Confirmar</button>
+    <button type="button" value="Cancelar" mat-button>Cancelar</button>
+  </div>
+</form>
