--- a/src/app/paginas/mis-datos/mis-datos.component.html
+++ b/src/app/paginas/mis-datos/mis-datos.component.html
@@ -3,15 +3,7 @@
   <div class="container-principal">
     <div class="izquierda">
       <div class="listaFormularios">
-        <h2>Formularios</h2>
-        <ul>
-          <li>pedido2</li>
-          <li>pedido2</li>
-          <li>pedido2</li>
-          <li>pedido2</li>
-          <li>pedido2</li>
-          <li>pedido2</li>
-        </ul>
+        <button><h2>Formularios</h2></button>
       </div>
     </div>
     <div class="centro">
@@ -26,7 +18,7 @@
         <img src="../../../assets/img/antilopejpg.jpg" alt="" />
       </div>
       <div class="imgForms" *ngIf="user.gender === 'Pelado'">
-        <img src="../../../assets/img/girlAstronauta.jpg" alt="" />
+        <img src="../../../assets/img/pelado.gif" alt="" />
       </div>
     </div>
     <div class="derecha">
