--- a/src/app/paginas/eventos-historicos/eventos-historicos.component.css
+++ b/src/app/paginas/eventos-historicos/eventos-historicos.component.css
@@ -42,7 +42,7 @@ a {
 .background {
   background-color: rgba(27, 27, 27, 0.719);
   position: relative;
-  padding-top: 50px;
+  padding-top: 150px;
   margin-left: 10rem;
   margin-right: 10rem;
   padding-bottom: 5rem;
@@ -50,4 +50,8 @@ a {
 
 .texto{
   padding: 1rem;
+}
+
+.lineaStar{
+  color: white;
 }
