--- a/src/app/paginas/mis-datos/mis-datos.component.css
+++ b/src/app/paginas/mis-datos/mis-datos.component.css
@@ -13,6 +13,22 @@ h2{
     font-size: 3rem;
     color: white;
     font-family: 'Orbitron', sans-serif;
+    margin: 1rem;
+}
+
+.listaFormularios{
+    text-align: center;
+    padding-right: 10rem;
+}
+
+.listaFormularios button{
+    background-color: rgba(255, 255, 255, 0.179);
+    border-radius: 20px;
+    box-shadow: 5px 2px 2px rgb(255, 255, 255)
+}
+
+.listaFormularios button:hover{
+    background-color: rgba(255, 255, 255, 0.445);
 }
 
 img{
