cards adelantadas pero no terminadas

--- a/src/app/modales/ships-detallado/ships-detallado.component.html
+++ b/src/app/modales/ships-detallado/ships-detallado.component.html
@@ -1,1 +1,11 @@
-<p>ships-detallado works!</p>
+<div class="card" *ngFor="let ship of ships">
+    <h2> {{ship.name}}</h2>
+    <img src="{{ship.image}}" alt="imagen ship">
+<div class="texto">
+    <p>Rol:</p>
+    <ul *ngFor="let rol of ship.roles">
+        <p>{{rol}}</p>
+    </ul>
+    <p>Tipo: {{ship.type}}</p>
+</div>
+</div>
