--- a/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
+++ b/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
@@ -1,1 +1,11 @@
-<p>lanzamiento-detallado works!</p>
+<div class="card">
+    <h2>Lanzamineto {{data.name}}</h2>
+    <img src="{{data.photo}}" alt="imagen lanzamiento">
+<div class="texto">
+    <p>Fecha: {{data.date_utc }}</p>
+    <p>Detalles: {{data.details}}</p>
+    <p>Numero de vuelo: {{data.flight_number}}</p>
+    <p>Exito: {{data.success}}</p>
+    <p>Fallas: {{data.failures}}</p>
+</div>
+</div>
