--- a/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
+++ b/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
@@ -1,11 +1,13 @@
 <div class="card">
-    <h2>Lanzamineto {{data.name}}</h2>
-    <img src="{{data.photo}}" alt="imagen lanzamiento">
-<div class="texto">
-    <p>Fecha: {{data.date_utc }}</p>
-    <p>Detalles: {{data.details}}</p>
-    <p>Numero de vuelo: {{data.flight_number}}</p>
-    <p>Exito: {{data.success}}</p>
-    <p>Fallas: {{data.failures}}</p>
-</div>
+    <h2>Lanzamiento {{data.name}}</h2>
+    <div class="carrousel">
+        <image-slider [slides]="slides"></image-slider>
+    </div>
+    <div class="texto">
+        <p>Fecha: {{data.date_utc }}</p>
+        <p>Detalles: {{data.details}}</p>
+        <p>Numero de vuelo: {{data.flight_number}}</p>
+        <p>Exito: {{data.success}}</p>
+        <p>Fallas: {{data.failures}}</p>
+    </div>
 </div>
