--- a/src/app/paginas/detalle-lanzamiento/detalle-lanzamiento.component.html
+++ b/src/app/paginas/detalle-lanzamiento/detalle-lanzamiento.component.html
@@ -58,8 +58,11 @@
             <div class="imgdiv" (click)="modalCrew()" matTooltip="Crew">
               <img src="../../../assets/img/crew.jpg" class="imgDentroChip" alt="crew" />
             </div>
-          </div>
+          </div> 
         </div>
+        <!-- <object data="../../../assets/svg/vista-lanzamientos.svg" type="image/svg+xml" class="svg-img">
+          Tu navegador no admite SVG.
+        </object> -->
       </div>
     </div>
   </div>
