--- a/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.css
+++ b/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.css
@@ -4,6 +4,7 @@ margin: 0;
 padding-left: 10rem;
 padding-right: 10rem;
 text-align: center;
+color: white;
 }
 
 .card img{
@@ -19,11 +20,13 @@ h2{
 
 p{
     text-align: start;
-    padding-left: 15rem;
     margin: 0;
 }
 
 .texto p{
     padding: 1rem;
-    padding-left: 12rem;
 }
+
+.carrousel {
+    height: 20rem;
+  }
