--- a/src/app/modales/capsula-detallado/capsula-detallado.component.html
+++ b/src/app/modales/capsula-detallado/capsula-detallado.component.html
@@ -1,1 +1,47 @@
-<p>capsula-detallado works!</p>
+<div class="conteiner">
+    <div class="titulo"><h2>Capsulas</h2></div>
+    <div class="informacion">
+        <img src="../../../assets/img/capsula-general.jpg" alt="Capsula general" />
+      <div>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <ng-container matColumnDef="nro-serie">
+            <th mat-header-cell *matHeaderCellDef>Nro de serie</th>
+            <td mat-cell *matCellDef="let element">{{ element.serial }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Estado</th>
+            <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef>Tipo</th>
+            <td mat-cell *matCellDef="let element">{{ element.type }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="last-update">
+            <th mat-header-cell *matHeaderCellDef>Actualizacion</th>
+            <td mat-cell *matCellDef="let element">{{ element.last_update }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="nro-aterrizaje">
+            <th mat-header-cell *matHeaderCellDef>Cantidad aterrizajes</th>
+            <td mat-cell *matCellDef="let element">{{ element.land_landings }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="nro-acuatizajes">
+            <th mat-header-cell *matHeaderCellDef>Cantidad acuatizajes</th>
+            <td mat-cell *matCellDef="let element">{{ element.water_landings }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="reutilizaciones">
+            <th mat-header-cell *matHeaderCellDef>Reusos</th>
+            <td mat-cell *matCellDef="let element">{{ element.reuse_count }}</td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+      </div>
+    </div>
+  </div>
