--- a/src/app/modales/core-detallado/core-detallado.component.html
+++ b/src/app/modales/core-detallado/core-detallado.component.html
@@ -1,10 +1,44 @@
-<div *ngFor="let core of cores">
-    {{core.reuse_count}}
-    {{core.rtls_attempts}}
-    {{core.rtls_landings}}
-    {{core.asds_attempts}}
-    {{core.asds_landings}}
-    {{core.last_update}}
-    {{core.serial}}
-    {{core.status}}
-</div>
+<div class="conteiner">
+    <div class="titulo"><h2>Payloads</h2></div>
+    <div class="informacion">
+        <img src="../../../assets/img/payloads.jpg" alt="Payload general" />
+      <div>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <ng-container matColumnDef="nro-serie">
+            <th mat-header-cell *matHeaderCellDef>Nro de serie</th>
+            <td mat-cell *matCellDef="let element">{{ element.serial }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Estado</th>
+            <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="reuses">
+            <th mat-header-cell *matHeaderCellDef>Reusos</th>
+            <td mat-cell *matCellDef="let element">{{ element.reuse_count }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="last-update">
+            <th mat-header-cell *matHeaderCellDef>Actualizacion</th>
+            <td mat-cell *matCellDef="let element">{{ element.last_update }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="%-aterrizajes-exitosos">
+            <th mat-header-cell *matHeaderCellDef>% de aterrizajes exitosos</th>
+            <td mat-cell *matCellDef="let element">{{ element. }}</td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+  
+        <mat-paginator
+          [pageSizeOptions]="[5]"
+          showFirstLastButtons
+          aria-label="Select page of periodic elements"
+        >
+        </mat-paginator>
+      </div>
+    </div>
+  </div>
