--- a/src/app/modales/login/login.component.css
+++ b/src/app/modales/login/login.component.css
@@ -36,6 +36,10 @@
     font-size: 1rem;
     font-weight: bold;
     cursor: pointer;
+    border-radius: 10px;
+    border: 0;
+    background-color: white;
+    box-shadow: 2px 2px 2px black;
 }
 span {
     color: red;
