--- a/src/app/modales/core-detallado/core-detallado.component.html
+++ b/src/app/modales/core-detallado/core-detallado.component.html
@@ -26,7 +26,7 @@
   
           <ng-container matColumnDef="%-aterrizajes-exitosos">
             <th mat-header-cell *matHeaderCellDef>% de aterrizajes exitosos</th>
-            <td mat-cell *matCellDef="let element">{{ element. }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.porcentaje }}</td>
           </ng-container>
   
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
