--- a/src/app/modales/crew-detallado/crew-detallado.component.html
+++ b/src/app/modales/crew-detallado/crew-detallado.component.html
@@ -1,4 +1,8 @@
-<div *ngIf="crew != null">
+<div class="conteiner">
+    <div class="titulo">
+      <h2>Crew</h2>
+    </div>
+<div *ngIf="crew.length != 0">
 <mat-tab-group animationDuration="2000ms">
     <div class="card" *ngFor="let member of crew">
         <mat-tab label={{member.name}}>
@@ -9,6 +13,7 @@
     </div>
 </mat-tab-group>
 </div>
-<div *ngIf="tieneCrew == true">
-    no hay datos
-</div>
+<div *ngIf="crew.length == 0">
+    <span>Este lanzamiento no tiene crew</span>
+  </div>
+  </div>
