--- a/src/app/modales/core-detallado/core-detallado.component.css
+++ b/src/app/modales/core-detallado/core-detallado.component.css
@@ -3,7 +3,7 @@
     padding-left: 5rem;
     padding-right: 5rem;
     background-color: rgb(71, 71, 71);
-    height: 850px;
+    color: white;
   }
   
   img {
