--- a/src/app/modales/ships-detallado/ships-detallado.component.css
+++ b/src/app/modales/ships-detallado/ships-detallado.component.css
@@ -1,32 +1,57 @@
-.card{
+.card {
     background-color: rgb(71, 71, 71);
     margin: 0;
     padding-left: 10rem;
     padding-right: 10rem;
     text-align: center;
-    }
-    
-    img{
-        height: 400px;
-        border-radius: 20px;
-    }
-    
-    h2{
-        font-size: 3rem;
-        margin: 0;
-        padding: 3rem;
-    }
-    
-    p{
-        text-align: start;
-        padding-left: 15rem;
-        margin: 0;
-    }
-    
-    .texto p{
-        padding: 1rem;
-        padding-left: 12rem;
-    }
+}
+
+img {
+    height: 400px;
+    border-radius: 20px;
+}
+
+h2 {
+    font-size: 3rem;
+    margin: 0;
+    padding: 3rem;
+}
+
+p {
+    text-align: start;
+    padding-left: 15rem;
+    margin: 0;
+}
+
+.texto p {
+    padding: 1rem;
+    padding-left: 12rem;
+}
+
 .container {
     padding: 2rem;
+}
+
+.conteiner {
+    padding: 1rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    background-color: rgb(71, 71, 71);
+    color: white;
+}
+
+.titulo {
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-family: "Orbitron", sans-serif;
+}
+
+.titulo h2 {
+    margin: 0;
+    padding: 0;
+    margin: 1rem;
+    margin-bottom: 1.5rem;
 }
