--- a/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.css
+++ b/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.css
@@ -1,32 +1,42 @@
-.card{
-background-color: rgb(71, 71, 71);
-margin: 0;
-padding-left: 10rem;
-padding-right: 10rem;
-text-align: center;
-color: white;
+.card {
+  background-color: rgb(71, 71, 71);
+  margin: 0;
+  padding-left: 10rem;
+  padding-right: 10rem;
+  text-align: center;
+  color: white;
+  font-family: "Comfortaa", sans-serif;
 }
 
-.card img{
-    height: 400px;
-    border-radius: 20px;
+.card img {
+  height: 400px;
+  border-radius: 20px;
 }
 
-h2{
-    font-size: 3rem;
-    margin: 0;
-    padding: 3rem;
+h2 {
+  font-size: 3rem;
+  margin: 0;
+  padding: 3rem;
 }
 
-p{
-    text-align: start;
-    margin: 0;
+p {
+  text-align: start;
+  margin: 0;
 }
 
-.texto p{
-    padding: 1rem;
+.texto p {
+  padding: 1rem;
 }
 
 .carrousel {
-    height: 20rem;
-  }
+  height: 20rem;
+}
+
+.carrousel p {
+    position: fixed;
+}
+
+.sector1 {
+  display: flex;
+  justify-content: space-between;
+}
