--- a/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
+++ b/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
@@ -1,13 +1,15 @@
 <div class="card">
   <h2>Lanzamiento {{ data.name }}</h2>
   <div class="carrousel">
-    <div *ngIf="data.success == true">
+    <div *ngIf="data.success == true" class="exitoso">
         <p class="exito">Exito</p>
       </div>
-      <div *ngIf="data.success == false">
+      <div *ngIf="data.success == false" class="exito">
         <p class="fracaso">Fracaso</p>
       </div>
-      {{data.success}}
+      <div *ngIf="data.success == undefined" class="exito">
+        <p class="sin-definir">Sin informacion</p>
+      </div>
     <image-slider [slides]="slides"></image-slider>
   </div>
   <div class="texto">
