--- a/src/app/modales/ships-detallado/ships-detallado.component.html
+++ b/src/app/modales/ships-detallado/ships-detallado.component.html
@@ -1,31 +1,46 @@
 <div class="conteiner">
-    <div class="titulo">
-        <h2>Crew</h2>
-    </div>
-    <div *ngIf="ships.length != 0">
-        <mat-tab-group animationDuration="2000ms">
-            <div class="card" *ngFor="let ship of ships">
-
-                <mat-tab label={{ship.name}}>
-                    <div class="container">
-                        <img *ngIf="ship.image != null" src="{{ship.image}}" alt="imagen ship">
-                        <img *ngIf="ship.image == null" src="../../../assets/img/ship-default.jpg" alt="imagen ship">
-                        <div class="texto">
-                            <p>Rol:</p>
-                            <mat-chip-set class="example-chip" cdkDropList cdkDropListOrientation="horizontal">
-                                <mat-chip class="example-box" cdkDrag *ngFor="let rol of ship.roles">
-                                    {{rol}}
-                                </mat-chip>
-                            </mat-chip-set>
-                        </div>
-                        <p>Tipo: {{ship.type}}</p>
-
-                    </div>
-                </mat-tab>
+  <div class="titulo">
+    <h2>Crew</h2>
+  </div>
+  <div *ngIf="ships.length != 0">
+    <mat-tab-group animationDuration="2000ms">
+      <div class="card" *ngFor="let ship of ships">
+        <mat-tab label="{{ ship.name }}">
+          <div class="container">
+            <img
+              *ngIf="ship.image != null"
+              src="{{ ship.image }}"
+              alt="imagen ship"
+            />
+            <img
+              *ngIf="ship.image == null"
+              src="../../../assets/img/ship-default.jpg"
+              alt="imagen ship"
+            />
+            <div class="texto">
+              <h3>Nombre: {{ ship.name }}</h3>
+              <p>Tipo: {{ ship.type }}</p>
+              <p>Rol:</p>
+              <mat-chip-set
+                class="example-chip"
+                cdkDropList
+                cdkDropListOrientation="horizontal"
+              >
+                <mat-chip
+                  class="example-box"
+                  cdkDrag
+                  *ngFor="let rol of ship.roles"
+                >
+                  {{ rol }}
+                </mat-chip>
+              </mat-chip-set>
             </div>
-        </mat-tab-group>
-    </div>
-        <div *ngIf="ships.length == 0">
-            <span>Este lanzamiento no tiene ships</span>
-        </div>
-    </div>
+          </div>
+        </mat-tab>
+      </div>
+    </mat-tab-group>
+  </div>
+  <div *ngIf="ships.length == 0">
+    <span>Este lanzamiento no tiene ships</span>
+  </div>
+</div>
